# daily-work-digest

./: .env.example  .gitignore  ARCHITECTURE.md  CONFIGURATION.md  OPERATING_MANUAL.md  README.md  TROUBLESHOOTING.md  config.example.yaml  pyproject.toml
docs/: GOOGLE_INTEGRATIONS.md
scripts/: install_windows_startup_shortcut.ps1  install_windows_task.ps1  run_digest.ps1  run_morning_digest.ps1  run_night_digest.ps1  smoke_test.ps1  uninstall_windows_task.ps1
src/digest/: __init__.py  attribute.py  cli.py  config.py  context.py  corroborate.py  email_render.py  email_send.py  env.py  extract.py  generate.py  harvest.py  harvest_claude.py  ingest.py  ingest_git.py  ingest_google.py  ingest_notes.py  ingest_sessions.py  llm.py  llm_v2.py  logging_setup.py  pipeline.py  render_v2.py  report.py  state_update.py  store.py  store_v2.py  summarize.py  text_utils.py
src/digest/prompts/: morning_brief.md  night_digest.md  system.md  trello_update.md  v2_extract_system.md  v2_state_system.md
tests/: conftest.py  test_attribute.py  test_cli.py  test_config.py  test_corroborate.py  test_extract.py  test_generate.py  test_git_state.py  test_harvest.py  test_ingest_sessions.py  test_llm.py  test_llm_v2.py  test_output_quality.py  test_pipeline.py  test_render_v2.py  test_state_update.py  test_store.py  test_store_v2.py
