[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "daily-work-digest"
version = "0.1.0"
description = "Local daily digest generator for Claude/Codex/git work."
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
digest = "digest.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
digest = ["prompts/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
